--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.9.6",
-    "hardhat": "^2.12.0"
+    "autoprefixer": "^10.4.19",
+    "hardhat": "^2.12.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
